# ML-Zoomcamp-HW-Repository

./: HW1.ipynb  HW2.ipynb  HW3.ipynb  HW4.ipynb  README.md
HW5/: Dockerfile.txt  HW5.ipynb  Untitled.ipynb  main.py  predict.py  pyproject.toml  requirements.txt  untitled.py
