[project]
name = "hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.120.3",
    "flask>=3.1.2",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pickle-mixin>=1.0.2",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
